1.4.0 - Bug fixes!
A LOT of bug fixes!!